[gd_scene load_steps=4 format=3 uid="uid://drt0m6eqssinx"]

[ext_resource type="Script" path="res://movingPlatformFake.gd" id="1_vob7l"]
[ext_resource type="Texture2D" uid="uid://bivcpn7n38jqg" path="res://Assets/movingPlatformFake.png" id="1_y0x6k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mj6rs"]
size = Vector2(240, 16)

[node name="MovingPlatformFake" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_vob7l")

[node name="Platform" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_y0x6k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_mj6rs")

[node name="cutscnWaitTime" type="Timer" parent="."]
wait_time = 2.0

[node name="deathTimer" type="Timer" parent="."]

[connection signal="timeout" from="cutscnWaitTime" to="." method="_on_cutscn_wait_time_timeout"]
[connection signal="timeout" from="deathTimer" to="." method="_on_death_timer_timeout"]
